--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -9,3 +9,5 @@
   <label>Say something:</label><br>
   <input type="text" data-behavior="room_speaker">
 </form>
+
+<%= react_component("ChatRoom", props: @hello_world_props, prerender: false) %>
