--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("ChatRoom", props: { room: @room, messages: @messages, rooms: @rooms } , prerender: false) %>
+<%= react_component("App", props: { room: @room, messages: @messages, rooms: @rooms } , prerender: false) %>
