--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -1,3 +1,32 @@
 // Place all the styles related to the rooms controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.fade-enter {
+  transition: all 0.3s;
+  opacity: 0;
+}
+.fade-enter .modal-contents {
+  transition: all 0.3s;
+  transform: scale(1) translate(0, -20px);
+}
+.fade-enter-active {
+  opacity: 1;
+}
+.fade-enter-active .modal-contents {
+  transform: scale(1) translate(0, 0);
+}
+
+.fade-exit {
+  transition: all 0.3s;
+  opacity: 1;
+}
+.fade-exit .modal-contents {
+  transition: all 0.3s;
+  transform: scale(1) translate(0, 0);
+}
+.fade-exit-active {
+  opacity: 0;
+}
+.fade-exit-active .modal-contents {
+  transform: scale(1) translate(0, -20px);
+}
