--- a/app/views/rooms/dummy.html.erb
+++ b/app/views/rooms/dummy.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("App", props: { rooms: @rooms } , prerender: false) %>
+<%= react_component("App", props: {} , prerender: false) %>
